# shifts

./: Makefile  README.md  docker-compose.yml  pyproject.toml
src/: Dockerfile  pyproject.toml
src/shifts/: alembic.ini  prestart.sh  pyproject.toml  pytest.ini  run.sh  shifts.db
src/shifts/alembic/: env.py
src/shifts/alembic/versions/: 5880e703ea25_add_tables.py  64cca7558293_add_a_unique_constraint_to_shift.py  b7b410934d8c_add_password_column_to_user.py
src/shifts/app/: backend_pre_start.py  initial_data.py  main.py
src/shifts/app/api/: deps.py
src/shifts/app/api/api_v1/: api.py
src/shifts/app/core/: auth.py  config.py  security.py
src/shifts/app/crud/: base.py  crud_manager.py  crud_shift.py  crud_worker.py  crud_worker_shift.py
src/shifts/app/db/: base.py  base_class.py  init_db.py  session.py
src/shifts/app/models/: manager.py  shift.py  user.py  worker_shift.py
src/shifts/app/schemas/: __init__.py  manager.py  shift.py  user.py  worker.py  worker_shift.py
src/shifts/integration/: conftest.py  pytest.ini
src/shifts/integration/manager/: test_manager_delete.py  test_manager_get.py  test_manager_post.py
src/shifts/integration/shift/: test_shift_delete.py  test_shift_get.py  test_shift_post.py
src/shifts/integration/worker/: test_worker_delete.py  test_worker_get.py  test_worker_post.py
src/shifts/tests/: test_main.py
src/shifts/tests/api/: conftest.py
src/shifts/tests/core/: conftest.py  test_auth.py  test_config.py  test_security.py
src/shifts/tests/crud/: conftest.py  test_base.py  test_crud_manager.py  test_crud_worker.py
(+46 files in other folders)
